--- a/03_basic_normaliser_part_ii/basic_normaliser_2.html
+++ b/03_basic_normaliser_part_ii/basic_normaliser_2.html
@@ -11,12 +11,12 @@
 
 <div id="content">
 This part of the plugin howto will focus on extending our basic normaliser (the one that just writes "The foo file contents go here!") 
-to do something mildy useful. Based on the information in part 1, we will be parsing the foo files, and writing out the parts within the 'part' tag. 
+to do something mildly useful. Based on the information in part 1, we will be parsing the foo files, and writing out the parts within the 'part' tag. 
 The opening tag will be "foo", which is already done. We also have to look at the escape characters. So how to begin? 
 Well the only part of the normaliser that will need to be changed is the parse method. First off, lets open the XenaInputSource, 
 and get an InputStream that we can read bytes from - and then turn it into a character stream. Since we know that the character set will be 
-ASCII or UTF-8, we dont need to worry about guessing the character set, if we were required to do this however, a number of helper methods 
-exist within Xena to allow this to be done. Initially, lets just write out every character we get into the content of the opening foo element.
+ASCII or UTF-8, we don't need to worry about guessing the character set, if we were required to do this however, a number of helper methods 
+exist within Xena to allow this to be done. Initially, let's just write out every character we get into the content of the opening foo element.
 
 <div id="code"><pre>
 	public void parse(InputSource input) {	
@@ -37,8 +37,8 @@ exist within Xena to allow this to be done. Initially, lets just write out every
 </pre></div>
 
 So far so good, but it doesnt do a great deal further toward getting our Foo contents into the desired schema. So, what is next? 
-Well the first thing to do will be to remove the opening "~beginFoo". Now since the magic number is already defined as a static final string 
-in the FooGuesser, lets make that visible to all and sundry, and then we can access it here. So, based on this, we can update our parse method:
+Well the first thing to do will be to remove the opening "~beginFoo". Since the magic number is already defined as a static final string 
+in the FooGuesser, let's make that visible to all and sundry, and then we can access it here. So based on this, we can update our parse method:
 
 <div id="code"><pre>
 	public void parse(InputSource input) {
@@ -151,7 +151,7 @@ And here are the contents of our normalised file:
 
 So we can see that we are now successfully capturing the contents of the original foo file. However the astute reader will quickly see 
 that there is a problem - we are not taking into account the escape character. This is a fairly simple modification - 
-the only catch is to check for end of stream when we get the character folowing the escape. The only code that will change will be in the 
+the only catch is to check for end of stream when we get the character following the escape. The only code that will change will be in the 
 while loop within the parse method. For brevity, all else will be excluded. The code is written to maximise clarity rather than efficiency, 
 and since we are going to simply print the character following the escape if it is a '~' or a '\', and ignore the escape otherwise, 
 we can assume that following the escape we will always just write out the character if there is one.
